# kinde-python-sdk

./: .coderabbit.yaml  .coveragerc  .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .pre-commit-config.yaml  .travis.yml  ASYNC_SYNC_GUIDE.md  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  MIGRATION.md  QUICK_REFERENCE.md  README.md  README_management_client.md  REFACTORING_NOTES.md  config.yaml  generate_frontend_sdk.py  generate_management_sdk.py  kinde_sdk_README.md  openapitools.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  starter.py  test_management_client.py  test_organization_users.py  tox.ini
.github/workflows/: ci.yml  python.yml
.openapi-generator/: FILES
docs/: APIsApi.md  AddAPIScopeRequest.md  AddAPIsRequest.md  AddOrganizationUsersRequest.md  AddOrganizationUsersRequestUsersInner.md  AddOrganizationUsersResponse.md  AddRoleScopeRequest.md  AddRoleScopeResponse.md  ApiResult.md  Applications.md  ApplicationsApi.md  AuthorizeAppApiResponse.md  BillingAgreementsApi.md  BillingApi.md  BillingEntitlementsApi.md  BillingMeterUsageApi.md  BusinessApi.md  CallbacksApi.md  Category.md  ConnectedAppsAccessToken.md  ConnectedAppsApi.md  ConnectedAppsAuthUrl.md  Connection.md  ConnectionConnection.md  ConnectionsApi.md  CreateApiScopesResponse.md  CreateApiScopesResponseScope.md  CreateApisResponse.md  CreateApisResponseApi.md  CreateApplicationRequest.md  CreateApplicationResponse.md  CreateApplicationResponseApplication.md  CreateBillingAgreementRequest.md  CreateCategoryRequest.md  CreateCategoryResponse.md  CreateCategoryResponseCategory.md  CreateConnectionRequest.md  CreateConnectionRequestOptions.md  CreateConnectionRequestOptionsOneOf.md  CreateConnectionRequestOptionsOneOf1.md  (+222 more)
examples/: async_sync_examples.py  flask_route_protection_example.py  management_client_example.py  route_protection_config.yaml  simple_http_oauth_server.py  tokens_usage.py
generator/: README.md  config.yaml  generate.sh
kinde_fastapi/: __init__.py  integration.py  pyproject.toml
kinde_fastapi/examples/: README.md  README_SmartOAuth.md  example_app.py  management_token_example.py  session.py
kinde_fastapi/framework/: __init__.py  fastapi_framework.py  fastapi_framework_factory.py
kinde_fastapi/middleware/: framework_middleware.py
kinde_fastapi/storage/: fastapi_storage.py  fastapi_storage_factory.py
kinde_flask/: __init__.py  integration.py  pyproject.toml
kinde_flask/examples/: README.md  example_app.py
kinde_flask/framework/: flask_framework.py  flask_framework_factory.py
kinde_flask/middleware/: framework_middleware.py
kinde_flask/storage/: flask_storage_factory.py
kinde_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  framework_detector.py  kinde_api_client.py  model_utils.py  rest.py  schemas.py
kinde_sdk/api/: __init__.py  apis_api.py  applications_api.py  billing_agreements_api.py  billing_api.py  billing_entitlements_api.py  billing_meter_usage_api.py  business_api.py  callbacks_api.py  connected_apps_api.py  connections_api.py  environment_variables_api.py  environments_api.py  feature_flags0_api.py  feature_flags_api.py  identities_api.py  industries_api.py  mfa_api.py  o_auth_api.py  organizations_api.py  permissions_api.py  properties_api.py  property_categories_api.py  roles_api.py  search_api.py  self_serve_portal_api.py  subscribers_api.py  timezones_api.py  users_api.py  webhooks_api.py
kinde_sdk/apis/: __init__.py  path_to_api.py  tag_to_api.py
kinde_sdk/auth/: __init__.py  api_options.py  async_claims.py  async_oauth.py  base_auth.py  base_oauth.py  claims.md  claims.py  config_loader.py  entitlements.py  enums.py  feature_flags.md  feature_flags.py  local_storage.py  login_options.py  memory_storage.py  oauth.py  options.py  permissions.md  permissions.py  permissions_options.py  portals.py  postgres_storage.py  profiles.py  roles.py  route_middleware.py  route_protection.py  smart_oauth.py  storage_factory.py  storage_interface.py  token_manager.py  tokens.py  user_session.py
kinde_sdk/core/: __init__.py  exceptions.py  helpers.py  session_management.py
kinde_sdk/docs/: CreateUser200Response.md  CreateUserRequest.md  CreateUserRequestIdentitiesInner.md  CreateUserRequestIdentitiesInnerDetails.md  CreateUserRequestProfile.md  OAuthApi.md  User.md  UserIdentity.md  UserIdentityResult.md  UserProfile.md  UserProfileV2.md  Users.md  UsersApi.md
kinde_sdk/frontend/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
kinde_sdk/management/: .openapi-generator-ignore  README.md  __init__.py  api_client.py  configuration.py  custom_exceptions.py  exceptions.py  kinde_api_client.py  management_client.py  rest.py  (+2 more)
test/: test_add_api_scope_request.py  test_add_apis_request.py  test_add_organization_users_request.py  test_add_organization_users_request_users_inner.py  test_add_organization_users_response.py  test_add_role_scope_request.py  test_add_role_scope_response.py  test_api_result.py  test_apis_api.py  test_applications.py  test_applications_api.py  test_authorize_app_api_response.py  test_billing_agreements_api.py  test_billing_api.py  test_billing_entitlements_api.py  test_billing_meter_usage_api.py  test_business_api.py  test_callbacks_api.py  test_category.py  test_connected_apps_access_token.py  test_connected_apps_api.py  test_connected_apps_auth_url.py  test_connection.py  test_connection_connection.py  test_connections_api.py  test_create_api_scopes_response.py  test_create_api_scopes_response_scope.py  test_create_apis_response.py  test_create_apis_response_api.py  test_create_application_request.py  test_create_application_response.py  test_create_application_response_application.py  test_create_billing_agreement_request.py  test_create_category_request.py  test_create_category_response.py  test_create_category_response_category.py  test_create_connection_request.py  test_create_connection_request_options.py  test_create_connection_request_options_one_of.py  test_create_connection_request_options_one_of1.py  (+221 more)
testv2/: README_async_sync_tests.md  run_async_sync_tests.py
(+1240 files in other folders)
