[project]
name = "kinde-python-sdk"
version = "1.2.9"
authors = [
    { name = "Kinde Engineering", email = "engineering@kinde.com" },
]
description = "Connect your app to the Kinde platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "urllib3",
    "python-dateutil",
    "Authlib",
    "pyjwt",
    "requests",
    "typing-extensions >=4.11.0",
    "frozendict >=2.4.3",
    "certifi >=2024.7.4",
]
[project.urls]
"Homepage" = "https://github.com/kinde-oss/kinde-python-sdk"
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
