[project]
name = "kinde-python-sdk"
version = "1.2.6"
authors = [
    { name = "Kinde Engineering", email = "engineering@kinde.com" },
]
description = "Connect your app to the Kinde platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "urllib3 >=2.2.0, <3.0",  
    "python-dateutil >=2.9.0, <3.0",
    "Authlib >=1.3.0, <2.0",
    "pyjwt >=2.8.0, <3.0",
    "requests >=2.31.0, <3.0",
    "typing-extensions >=4.11.0, <5.0",
    "frozendict >=2.4.3, <3.0",
    "certifi >=2024.2.2, <2025.0.0",
    "PyYAML >=6.0.0, <7.0.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi >=0.109.0, <1.0.0",
    "python-multipart >=0.0.6, <1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/kinde-oss/kinde-python-sdk"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kinde_sdk", "kinde_fastapi"]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
mypy = "^1.0"
bandit = "^1.7"
pylint = "^2.0"
pycodestyle = "^2.0"
pytest-asyncio = "^0.21.1"
pytest-timeout = "^2.2.0"

