[project]
name = "kinde-python-sdk"
version = "2.0.0-beta.7"
authors = [
    { name = "Kinde Engineering", email = "engineering@kinde.com" },
]
description = "Connect your app to the Kinde platform"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "urllib3 >=2.2.0, <3.0",
    "python-dateutil >=2.9.0, <3.0",
    "Authlib >=1.3.0, <2.0",
    "pyjwt >=2.10.0, <3.0",
    "requests >=2.32.2, <3.0",
    "typing-extensions >=4.11.0, <5.0",
    "frozendict >=2.4.3, <3.0",
    "certifi >=2024.2.2, <2025.0.0",
    "PyYAML >=6.0.1, <7.0.0",
    "cryptography >=41.0.0, <42.0.0",
    "python-dotenv >=1.0.0, <2.0.0",
    "itsdangerous >=2.2.0, <3.0.0",
    "nest-asyncio >=1.5.8, <2.0.0",
    "httpx >=0.25.0, <0.26.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi >=0.110.0, <1.0.0",
    "python-multipart >=0.0.6, <1.0.0",
    "uvicorn >=0.25.0, <0.26.0",
]
flask = [
    "flask >=3.0.0, <4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/kinde-oss/kinde-python-sdk"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kinde_sdk", "kinde_fastapi", "kinde_flask"]
package-dir = {"" = "."}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"kinde_sdk" = ["**/*.py", "**/*.json", "**/*.yaml", "**/*.yml"]
"kinde_fastapi" = ["**/*.py", "**/*.json", "**/*.yaml", "**/*.yml"]
"kinde_flask" = ["**/*.py", "**/*.json", "**/*.yaml", "**/*.yml"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
mypy = "^1.5.0"
bandit = "^1.7"
pylint = "^2.0"
pycodestyle = "^2.0"
pytest-asyncio = "^0.21.1"
pytest-timeout = "^2.2.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

