[project]
name = "kinde-fastapi"
version = "0.1.0"
authors = [
    { name = "Kinde Engineering", email = "engineering@kinde.com" },
]
description = "FastAPI integration for the Kinde Python SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "kinde-python-sdk >=1.2.6",
    "fastapi >=0.109.0, <1.0.0",
    "python-multipart >=0.0.6, <1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/kinde-oss/kinde-python-sdk"
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta" 